Bug 314999 - segfault opening usecase diagram
Summary: segfault opening usecase diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-12 16:15 UTC by mattia.adami
Modified: 2013-05-30 08:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments
project file (27.50 KB, application/octet-stream)
2013-02-12 16:18 UTC, mattia.adami
Details
New crash information added by DrKonqi (5.60 KB, text/plain)
2013-04-16 18:05 UTC, Leyenda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mattia.adami 2013-02-12 16:15:52 UTC
Application: umbrello (2.10.0)
KDE Platform Version: 4.10.00
Qt Version: 4.8.2
Operating System: Linux 3.2.0-38-generic x86_64
Distribution: Ubuntu 12.04.2 LTS

-- Information about the crash:
- What I was doing when the application crashed:

Umbrello programmatically crashes when I open my file and I select the usecase diagram.
Umbrello version 2.10.0, kde 4.10, kubuntu 12.04.1

The crash can be reproduced every time.

-- Backtrace:
Application: Modellatore UML Umbrello (umbrello), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8be1abc780 (LWP 2351))]

Thread 3 (Thread 0x7f8bd020a700 (LWP 2352)):
#0  QTimerInfoList::repairTimersIfNeeded (this=0x7f8bc8002860) at kernel/qeventdispatcher_unix.cpp:408
#1  0x00007f8bdec073c1 in QTimerInfoList::timerWait (this=0x7f8bc8002860, tm=...) at kernel/qeventdispatcher_unix.cpp:451
#2  0x00007f8bdec05e5c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f8bd0209c6c) at kernel/qeventdispatcher_glib.cpp:136
#3  0x00007f8bdec05f05 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#4  0x00007f8bdb0b1846 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8bdb0b1f5b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f8bdb0b2164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f8bdec06906 in QEventDispatcherGlib::processEvents (this=0x7f8bc80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#8  0x00007f8bdebd5e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#9  0x00007f8bdebd6097 in QEventLoop::exec (this=0x7f8bd0209dd0, flags=...) at kernel/qeventloop.cpp:204
#10 0x00007f8bdead5057 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#11 0x00007f8bdebb5b4f in QInotifyFileSystemWatcherEngine::run (this=0x27f4f60) at io/qfilesystemwatcher_inotify.cpp:248
#12 0x00007f8bdead807b in QThreadPrivate::start (arg=0x27f4f60) at thread/qthread_unix.cpp:307
#13 0x00007f8bddc75e9a in start_thread (arg=0x7f8bd020a700) at pthread_create.c:308
#14 0x00007f8bddf7eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#15 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f8bc7fff700 (LWP 2353)):
#0  0x00007f8bddc77f69 in __pthread_mutex_lock (mutex=0x7f8bc0000a60) at pthread_mutex_lock.c:92
#1  0x00007f8bdb0ed5a1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8bdb0b1851 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8bdb0b1f5b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f8bdb0b2164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f8bdec06906 in QEventDispatcherGlib::processEvents (this=0x7f8bc00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f8bdebd5e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f8bdebd6097 in QEventLoop::exec (this=0x7f8bc7ffedd0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f8bdead5057 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007f8bdebb5b4f in QInotifyFileSystemWatcherEngine::run (this=0x2d6dc00) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f8bdead807b in QThreadPrivate::start (arg=0x2d6dc00) at thread/qthread_unix.cpp:307
#11 0x00007f8bddc75e9a in start_thread (arg=0x7f8bc7fff700) at pthread_create.c:308
#12 0x00007f8bddf7eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f8be1abc780 (LWP 2351)):
[KCrash Handler]
#6  operator QGraphicsScene* (this=<error reading variable: Cannot access memory at address 0x8>) at ../../include/QtCore/../../src/corelib/kernel/qpointer.h:78
#7  QGraphicsView::scene (this=0x0) at graphicsview/qgraphicsview.cpp:1592
#8  0x0000000000778706 in UMLListView::mouseReleaseEvent (this=0x2b35c90, me=0x7fff26bb3ec0) at ../../../umbrello/umbrello/umllistview.cpp:334
#9  0x00007f8bdf87afb4 in QWidget::event (this=0x2b35c90, event=0x7fff26bb3ec0) at kernel/qwidget.cpp:8371
#10 0x00007f8bdfc3b836 in QFrame::event (this=0x2b35c90, e=0x7fff26bb3ec0) at widgets/qframe.cpp:557
#11 0x00007f8bdfd4feeb in QAbstractItemView::viewportEvent (this=0x2b35c90, event=0x7fff26bb3ec0) at itemviews/qabstractitemview.cpp:1644
#12 0x00007f8bdfd97c75 in QTreeView::viewportEvent (this=0x2b35c90, event=0x7fff26bb3ec0) at itemviews/qtreeview.cpp:1257
#13 0x00007f8bdebd7498 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x2b2e150, event=0x7fff26bb3ec0) at kernel/qcoreapplication.cpp:1025
#14 0x00007f8bdf82a77f in notify_helper (e=0x7fff26bb3ec0, receiver=0x2b2e150, this=0x2601ce0) at kernel/qapplication.cpp:4552
#15 QApplicationPrivate::notify_helper (this=0x2601ce0, receiver=0x2b2e150, e=0x7fff26bb3ec0) at kernel/qapplication.cpp:4528
#16 0x00007f8bdf82ff2f in QApplication::notify (this=<optimized out>, receiver=0x2b2e150, e=0x7fff26bb3ec0) at kernel/qapplication.cpp:4099
#17 0x00007f8be0565b76 in KApplication::notify (this=0x7fff26bb4bc0, receiver=0x2b2e150, event=0x7fff26bb3ec0) at ../../kdeui/kernel/kapplication.cpp:311
#18 0x00007f8bdebd730c in QCoreApplication::notifyInternal (this=0x7fff26bb4bc0, receiver=0x2b2e150, event=0x7fff26bb3ec0) at kernel/qcoreapplication.cpp:915
#19 0x00007f8bdf82b782 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#20 QApplicationPrivate::sendMouseEvent (receiver=0x2b2e150, event=0x7fff26bb3ec0, alienWidget=0x2b2e150, nativeWidget=0x2b39130, buttonDown=0x2b2e150, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#21 0x00007f8bdf8aab15 in QETWidget::translateMouseEvent (this=0x2b39130, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#22 0x00007f8bdf8a9ace in QApplication::x11ProcessEvent (this=0x7fff26bb4bc0, event=0x7fff26bb4790) at kernel/qapplication_x11.cpp:3732
#23 0x00007f8bdf8d3052 in x11EventSourceDispatch (s=0x260b770, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#24 0x00007f8bdb0b1d53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f8bdb0b20a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f8bdb0b2164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f8bdec0689f in QEventDispatcherGlib::processEvents (this=0x25cf470, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00007f8bdf8d2cde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f8bdebd5e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f8bdebd6097 in QEventLoop::exec (this=0x7fff26bb4b30, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007f8bdebdb3e7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#32 0x000000000043b106 in main (argc=3, argv=0x7fff26bb4fd8) at ../../../umbrello/umbrello/main.cpp:111

Reported using DrKonqi
Comment 1 mattia.adami 2013-02-12 16:18:46 UTC
Created attachment 77223 [details]
project file
Comment 2 Ralf Habacker 2013-04-05 08:35:11 UTC
Git commit 3e6a0baacd9d3f6648e98066695a3f23a185b75e by Ralf Habacker.
Committed on 05/04/2013 at 10:31.
Pushed by habacker into branch 'master'.

Crash fix accessing zero pointer.

M  +2    -1    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/3e6a0baacd9d3f6648e98066695a3f23a185b75e
Comment 3 Ralf Habacker 2013-04-05 08:38:23 UTC
The crash is fixed im master, but the file seems to be broken. 
It is not possible to drag use case widgets in the present diagram (which seems to be the root cause of the crash). Adding widgets to a new use case diagram works. 
It would be for interest how this use case diagram has been created.
Comment 4 Leyenda 2013-04-16 18:05:41 UTC
Created attachment 78966 [details]
New crash information added by DrKonqi

umbrello (2.10.2) on KDE Platform 4.10.2 using Qt 4.8.4

- What I was doing when the application crashed:
Launch umbrello, open my project, and when i select  to view use case diagram, umbrello crashes.

-- Backtrace (Reduced):
#6  operator QGraphicsScene* (this=<error reading variable: Cannot access memory at address 0x8>) at ../../include/QtCore/../../src/corelib/kernel/qpointer.h:78
#7  QGraphicsView::scene (this=0x0) at graphicsview/qgraphicsview.cpp:1592
[...]
#9  0x00007f6c067faa89 in QWidget::event (this=0x242b140, event=0x7fffe762b960) at kernel/qwidget.cpp:8375
#10 0x00007f6c06bad316 in QFrame::event (this=0x242b140, e=0x7fffe762b960) at widgets/qframe.cpp:557
#11 0x00007f6c06cc38bb in QAbstractItemView::viewportEvent (this=0x242b140, event=0x7fffe762b960) at itemviews/qabstractitemview.cpp:1644
Comment 5 Ralf Habacker 2013-05-30 08:17:21 UTC
Git commit 7e5311bebfb7c331a9941c9917c7e9f7b91bd140 by Ralf Habacker.
Committed on 05/04/2013 at 10:31.
Pushed by habacker into branch 'KDE/4.10'.

Crash fix accessing zero pointer.

M  +2    -1    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/7e5311bebfb7c331a9941c9917c7e9f7b91bd140