Crash fix accessing zero pointer.

BUG:314999